fixed align rules block on the tablet size UX #1

--- a/src/pages/room-page/room-page.scss
+++ b/src/pages/room-page/room-page.scss
@@ -200,7 +200,8 @@
     }
 
     &__rules {
-      align-self: flex-start;
+      display: flex;
+      flex-direction: column;
     }
 
     &__reviews-count {
